--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -99,7 +99,7 @@ enable = true
 
 # >远程脚本订阅
 [Remote Script]
-https://raw.githubusercontent.com/yishangfei/Loon/main/Script.conf, tag=script, enabled=false
+https://raw.githubusercontent.com/yishangfei/Loon/main/Script.conf, tag=script, enabled=true
 
 
 # >插件(类似Surge的模块)
