--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -88,7 +88,7 @@ https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.li
 # 神机规则(ChINA)
 https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list,DIRECT
 
-[Url Rewrite]
+[Remote Rewrite]
 https://raw.githubusercontent.com/yishangfei/Loon/main/Rewrite.list, tag=rewrite, enabled=true
 
 # >远程脚本订阅
