--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -25,7 +25,7 @@ host = 127.0.0.1
 [Remote Proxy]
 # 订阅节点
 # 格式为 别名 = 订阅 URL
-CNIX = https://yourSubscribeServer.com
+SubProxy = https://yourSubscribeServer.com
 
 [Proxy Group]
 # 以下为策略组定义
