--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -34,18 +34,28 @@ SubProxy = https://yourSubscribeServer.com
 # url-test模式，给提供的 url 发出 http header 请求，根据返回结果，选择测速最快的节点，默认间隔 600s，测速超时时间5s，为了避免资源浪费，建议节点数不要过多，只支持单个节点和远端节点，其他会被忽略
 # Auto = url-test, SubProxy, url = http://bing.com/,interval = 600
 ✈️ 节点选择 = select, SubProxy
-💠 健康模式 = url-test, SubProxy, url = http://bing.com/,interval = 600
+💠 健康模式 = url-test, SubProxy, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
+👋 手动切换 = select,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇰🇷 韩国节点,🇺🇲 美国节点,🇸🇬 新加坡节点
 🎧 网易解锁 = select,DIRECT,解锁网易云灰色音乐
 📮 谷歌服务 = select,✈️ 节点选择,💠 健康模式
-📟 电报信息 = select,✈️ 节点选择,💠 健康模式
-💰 宝贝支付 = select,✈️ 节点选择,💠 健康模式
-🍎 苹果服务 = select,✈️ 节点选择,DIRECT
-📺 奈飞影视 = select,✈️ 节点选择,💠 健康模式
-🎬 油管视频 = select,✈️ 节点选择,💠 健康模式
 🌍 国外网站 = select,✈️ 节点选择,💠 健康模式
+📟 电报信息 = select,✈️ 节点选择,💠 健康模式,🚀 手动切换
+💰 宝贝支付 = select,✈️ 节点选择,💠 健康模式,🚀 手动切换
+📺 奈飞影视 = select,✈️ 节点选择,💠 健康模式,🚀 手动切换
+🎬 油管视频 = select,✈️ 节点选择,💠 健康模式,🚀 手动切换
+🍎 苹果服务 = select,✈️ 节点选择,DIRECT
+
+# >筛选订阅节点
+[Remote Filter]
+# >通过正则方式筛选
+🇭🇰 香港节点 = NameRegex, FilterKey = "(?i)(港|HK|Hong)"
+🇨🇳 台湾节点 = NameRegex, FilterKey = "(?i)(台|TW|Tai)"
+🇯🇵 日本节点 = NameRegex, FilterKey = "(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
+🇰🇷 韩国节点 = NameRegex, FilterKey = "(?i)(KR|Korea|KOR|首尔|韩|韓)"
+🇺🇲 美国节点 = NameRegex, FilterKey = "(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
+🇸🇬 新加坡节点 = NameRegex, FilterKey = "(?i)(新加坡|坡|狮城|SG|Singapore)"
 
 [Rule]
-
 # GeoIP China
 GEOIP,CN,DIRECT
 # 最终规则（所有未在规则列表中的域名以及IP全部走此策略组，次策略组务必选择代理）
