--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -39,10 +39,10 @@ SubProxy = https://yourSubscribeServer.com
 🎧 网易解锁 = select,DIRECT,解锁网易云灰色音乐
 📮 谷歌服务 = select,✈️ 节点选择,💠 健康模式
 🌍 国外网站 = select,✈️ 节点选择,💠 健康模式
-📟 电报信息 = select,✈️ 节点选择,💠 健康模式,🚀 手动切换
-💰 宝贝支付 = select,✈️ 节点选择,💠 健康模式,🚀 手动切换
-📺 奈飞影视 = select,✈️ 节点选择,💠 健康模式,🚀 手动切换
-🎬 油管视频 = select,✈️ 节点选择,💠 健康模式,🚀 手动切换
+📟 电报信息 = select,✈️ 节点选择,💠 健康模式,👋 手动切换
+💰 宝贝支付 = select,✈️ 节点选择,💠 健康模式,👋 手动切换
+📺 奈飞影视 = select,✈️ 节点选择,💠 健康模式,👋 手动切换
+🎬 油管视频 = select,✈️ 节点选择,💠 健康模式,👋 手动切换
 🍎 苹果服务 = select,✈️ 节点选择,DIRECT
 
 # >筛选订阅节点
