--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -35,17 +35,17 @@ SubProxy = https://yourSubscribeServer.com
 # Auto = url-test, SubProxy, url = http://bing.com/,interval = 600
 💠 健康模式 = url-test,✈️ 香港节点,✈️ 台湾节点,✈️ 日本节点,✈️ 美国节点, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
 🎧 网易解锁 = select,DIRECT,解锁网易云灰色音乐
-📮 谷歌服务 = select,✈️ 节点选择,💠 健康模式,✈️ 香港节点,✈️ 台湾节点,✈️ 日本节点,✈️ 美国节点
-🌍 国外网站 = select,✈️ 节点选择,💠 健康模式,✈️ 香港节点,✈️ 台湾节点,✈️ 日本节点,✈️ 美国节点
-📟 电报信息 = select,✈️ 节点选择,💠 健康模式,✈️ 香港节点,✈️ 台湾节点,✈️ 日本节点,✈️ 美国节点
-💰 宝贝支付 = select,✈️ 节点选择,💠 健康模式,✈️ 香港节点,✈️ 台湾节点,✈️ 日本节点,✈️ 美国节点
-📺 奈飞影视 = select,✈️ 节点选择,💠 健康模式,✈️ 香港节点,✈️ 台湾节点,✈️ 日本节点,✈️ 美国节点
-🎬 油管视频 = select,✈️ 节点选择,💠 健康模式,✈️ 香港节点,✈️ 台湾节点,✈️ 日本节点,✈️ 美国节点
+📮 谷歌服务 = select,✈️ 节点选择,💠 健康模式,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
+🌍 国外网站 = select,✈️ 节点选择,💠 健康模式,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
+📟 电报信息 = select,✈️ 节点选择,💠 健康模式,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
+💰 宝贝支付 = select,✈️ 节点选择,💠 健康模式,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
+📺 奈飞影视 = select,✈️ 节点选择,💠 健康模式,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
+🎬 油管视频 = select,✈️ 节点选择,💠 健康模式,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
 🍎 苹果服务 = select,✈️ 节点选择,DIRECT
-✈️ 香港节点 = select,🇭🇰 香港节点
-✈️ 台湾节点 = select,🇨🇳 台湾节点
-✈️ 日本节点 = select,🇯🇵 日本节点
-✈️ 美国节点 = select,🇺🇲 美国节点
+🇭🇰 香港节点 = select,🇭🇰 香港节点
+🇨🇳 台湾节点 = select,🇨🇳 台湾节点
+🇯🇵 日本节点 = select,🇯🇵 日本节点
+🇺🇲 美国节点 = select,🇺🇲 美国节点
 
 # >筛选订阅节点
 [Remote Filter]
@@ -65,42 +65,50 @@ FINAL,✈️ 节点选择
 [Remote Rule]
 
 # Local Area Network(ACL4SSR局域网直连)
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,DIRECT
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,DIRECT, tag=ACL4SSR局域网直连
 
 # 自用网易云解锁规则(需自行添加服务器)
-https://raw.githubusercontent.com/fomooerking/WYMUSIC/master/WYYMusic.list,🎧 网易解锁
+https://raw.githubusercontent.com/fomooerking/WYMUSIC/master/WYYMusic.list,🎧 网易解锁, tag=网易解锁
 
 # NobyDa去广告规则（nobyda去广告规则已包含神机、lhie1去广告规则，无需再引用）
-https://raw.githubusercontent.com/NobyDa/Script/master/Surge/AdRule.list,REJECT
+https://raw.githubusercontent.com/NobyDa/Script/master/Surge/AdRule.list,REJECT, tag=NobyDa去广告规则
 
 # ACL4SSR去广告规则
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list,REJECT
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list,REJECT, tag=ACL4SSR去广告规则
 
 # 神机规则(媒体分流)
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/PayPal.list,💰 宝贝支付
+https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/PayPal.list, policy=💰 宝贝支付, tag=宝贝支付
 
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Google.list,📮 谷歌服务
+https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Google.list, policy=📮 谷歌服务, tag=谷歌服务
 
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/YouTube.list,🎬 油管视频
+https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/YouTube.list, policy=🎬 油管视频, tag=油管视频
 
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/Netflix.list,📺 奈飞影视
+https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/Netflix.list, policy=📺 奈飞影视, tag=奈飞影视
 
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Apple.list,🍎 苹果服务
+https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Apple.list, policy=🍎 苹果服务, tag=苹果服务
 
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,📟 电报信息
+https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list, policy=📟 电报信息, tag=电报信息
 
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/ForeignMedia.list,🌍 国外网站
+https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/ForeignMedia.list, policy=🌍 国外网站, tag=国外网站
 
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,🌍 国外网站
+https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list, policy=🌍 国外网站, tag=国外网站
 
 # ACL4SSR中国企业名录规则(增加某些国内厂商在国外的服务规则，如阿里HK可直连)
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list,DIRECT
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list,DIRECT, tag=ACL4SSR中国企业名录规则
 
 # 神机规则(ChINA)
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list,DIRECT
+https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list,DIRECT, tag=神机规则
+
+# >本地URL复写
+[URL Rewrite]
+enable = true
 
 [Remote Rewrite]
 https://raw.githubusercontent.com/yishangfei/Loon/main/Rewrite.list, tag=rewrite, enabled=true
+
+# >本地脚本
+[Script]
+enable = true
 
 # >远程脚本订阅
 [Remote Script]
