--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -33,19 +33,19 @@ SubProxy = https://yourSubscribeServer.com
 # 基于用户 UI 选择
 # url-test模式，给提供的 url 发出 http header 请求，根据返回结果，选择测速最快的节点，默认间隔 600s，测速超时时间5s，为了避免资源浪费，建议节点数不要过多，只支持单个节点和远端节点，其他会被忽略
 # Auto = url-test, SubProxy, url = http://bing.com/,interval = 600
-💠 健康模式 = url-test,✈️ 香港节点,✈️ 台湾节点,✈️ 日本节点,✈️ 美国节点, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
+🚀 自动选择 = url-test,✈️ 香港节点,✈️ 台湾节点,✈️ 日本节点,✈️ 美国节点, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
 🎧 网易解锁 = select,DIRECT,解锁网易云灰色音乐
-📮 谷歌服务 = select,✈️ 节点选择,💠 健康模式,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
-🌍 国外网站 = select,✈️ 节点选择,💠 健康模式,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
-📟 电报信息 = select,✈️ 节点选择,💠 健康模式,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
-💰 宝贝支付 = select,✈️ 节点选择,💠 健康模式,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
-📺 奈飞影视 = select,✈️ 节点选择,💠 健康模式,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
-🎬 油管视频 = select,✈️ 节点选择,💠 健康模式,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
-🍎 苹果服务 = select,✈️ 节点选择,DIRECT
-🇭🇰 香港节点 = select,🇭🇰 香港节点
-🇨🇳 台湾节点 = select,🇨🇳 台湾节点
-🇯🇵 日本节点 = select,🇯🇵 日本节点
-🇺🇲 美国节点 = select,🇺🇲 美国节点
+📮 谷歌服务 = select,🚀 自动选择,🇭🇰 香港选择,🇨🇳 台湾选择,🇯🇵 日本选择,🇺🇲 美国选择
+🌍 国外网站 = select,🚀 自动选择,🇭🇰 香港选择,🇨🇳 台湾选择,🇯🇵 日本选择,🇺🇲 美国选择
+📟 电报信息 = select,🚀 自动选择,🇭🇰 香港选择,🇨🇳 台湾选择,🇯🇵 日本选择,🇺🇲 美国选择
+💰 宝贝支付 = select,🚀 自动选择,🇭🇰 香港选择,🇨🇳 台湾选择,🇯🇵 日本选择,🇺🇲 美国选择
+📺 奈飞影视 = select,🚀 自动选择,🇭🇰 香港选择,🇨🇳 台湾选择,🇯🇵 日本选择,🇺🇲 美国选择
+🎬 油管视频 = select,🚀 自动选择,🇭🇰 香港选择,🇨🇳 台湾选择,🇯🇵 日本选择,🇺🇲 美国选择
+🍎 苹果服务 = select,DIRECT
+🇭🇰 香港选择 = select,🇭🇰 香港节点
+🇨🇳 台湾选择 = select,🇨🇳 台湾节点
+🇯🇵 日本选择 = select,🇯🇵 日本节点
+🇺🇲 美国选择 = select,🇺🇲 美国节点
 
 # >筛选订阅节点
 [Remote Filter]
