--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -30,28 +30,28 @@ SubProxy = https://yourSubscribeServer.com
 # 基于用户 UI 选择
 # url-test模式，给提供的 url 发出 http header 请求，根据返回结果，选择测速最快的节点，默认间隔 600s，测速超时时间5s，为了避免资源浪费，建议节点数不要过多，只支持单个节点和远端节点，其他会被忽略
 # Auto = url-test, SubProxy, url = http://bing.com/,interval = 600
-🚀 自动选择 = url-test,🇭🇰 香港筛选,🇨🇳 台湾筛选,🇯🇵 日本筛选,🇺🇲 美国筛选, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
+🚀 自动选择 = url-test,🇭🇰 香港筛选,🇨🇳 台湾筛选,🇺🇲 美国节点,🇯🇵 日本节点, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
 🎧 网易解锁 = select,DIRECT,解锁网易云灰色音乐
-📮 谷歌服务 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
-🌍 国外网站 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
-📟 电报信息 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
-💰 宝贝支付 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
-📺 奈飞影视 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
-🎬 油管视频 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇯🇵 日本节点,🇺🇲 美国节点
+📮 谷歌服务 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+🌍 国外网站 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+📟 电报信息 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+💰 宝贝支付 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+📺 奈飞影视 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+🎬 油管视频 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
 🍎 苹果服务 = select,DIRECT
 🇭🇰 香港节点 = select,🇭🇰 香港筛选
 🇨🇳 台湾节点 = select,🇨🇳 台湾筛选
-🇯🇵 日本节点 = select,🇯🇵 日本筛选
 🇺🇲 美国节点 = select,🇺🇲 美国筛选
+🇯🇵 日本节点 = select,🇯🇵 日本筛选
 
 # >筛选订阅节点
 [Remote Filter]
 # >通过正则方式筛选
-🇭🇰 香港筛选 = NameRegex, FilterKey = "(?i)(港|HK|Hong)"
-🇨🇳 台湾筛选 = NameRegex, FilterKey = "(?i)(台|TW|Tai)"
-🇯🇵 日本筛选 = NameRegex, FilterKey = "(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
-🇰🇷 韩国筛选 = NameRegex, FilterKey = "(?i)(KR|Korea|KOR|首尔|韩|韓)"
-🇺🇲 美国筛选 = NameRegex, FilterKey = "(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
+🇭🇰 香港筛选 = NameRegex, FilterKey = "^(?!.*?游戏).*(港|HK|Hong)"
+🇨🇳 台湾筛选 = NameRegex, FilterKey = "^(?!.*?游戏).*(台|TW|Tai)"
+🇰🇷 韩国筛选 = NameRegex, FilterKey = "^(?!.*?游戏).*(KR|Korea|KOR|首尔|韩|韓)"
+🇯🇵 日本筛选 = NameRegex, FilterKey = "^(?!.*?游戏).*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
+🇺🇲 美国筛选 = NameRegex, FilterKey = "^(?!.*?游戏).*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
 
 [Rule]
 # GeoIP China
