--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -30,7 +30,7 @@ SubProxy = https://yourSubscribeServer.com
 # 基于用户 UI 选择
 # url-test模式，给提供的 url 发出 http header 请求，根据返回结果，选择测速最快的节点，默认间隔 600s，测速超时时间5s，为了避免资源浪费，建议节点数不要过多，只支持单个节点和远端节点，其他会被忽略
 # Auto = url-test, SubProxy, url = http://bing.com/,interval = 600
-🚀 自动选择 = url-test,🇭🇰 香港筛选,🇨🇳 台湾筛选,🇺🇲 美国节点,🇯🇵 日本节点, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
+🚀 自动选择 = url-test,🇭🇰 香港筛选,🇨🇳 台湾筛选,🇺🇲 美国筛选,🇯🇵 日本筛选, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
 🎧 网易解锁 = select,DIRECT,解锁网易云灰色音乐
 📮 谷歌服务 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
 🌍 国外网站 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
