--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -14,14 +14,13 @@ dns-server = system,119.29.29.29,223.5.5.5,114.114.114.114
 allow-udp-proxy = false
 host = 127.0.0.1
 
-# >手动添加的节点
-[Proxy]
 
+[Proxy]
+# >手动添加的节点
 解锁网易云灰色音乐 = HTTP,106.52.127.72,19951
 
 [Remote Proxy]
 # 订阅节点
-# 格式为 别名 = 订阅 URL
 SubProxy = https://yourSubscribeServer.com
 
 [Proxy Group]
@@ -96,25 +95,24 @@ https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.li
 # 神机规则(ChINA)
 https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list,DIRECT, tag=神机规则
 
-# >本地URL复写
 [URL Rewrite]
+# >本地URL复写
 enable = true
 
 [Remote Rewrite]
+# >远程复写
 https://raw.githubusercontent.com/yishangfei/Loon/main/Rewrite.list, tag=rewrite, enabled=true
 
-# >本地脚本
 [Script]
+# >本地脚本
 enable = true
 
-# >远程脚本订阅
 [Remote Script]
+# >远程脚本订阅
 https://raw.githubusercontent.com/yishangfei/Loon/main/Script.conf, tag=script, enabled=true
 
-
-# >插件(类似Surge的模块)
 [Plugin]
-
+# >插件(类似Surge的模块)
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Block/Advertising.plugin, tag=重写去广告, enabled=false
 # >下面3个Tiktok解锁只能同时开启一个，其他禁用！
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Unlock/TikTokJP.plugin, tag=解锁TikTok 日本, enabled=false
