--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -53,7 +53,6 @@ SubProxy = https://yourSubscribeServer.com
 🇺🇲 美国筛选 = NameRegex, FilterKey = "^(?!.*?游戏).*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
 
 [Rule]
-DOMAIN-SUFFIX,music.126.net,🎧 网易解锁
 # GeoIP China
 GEOIP,CN,DIRECT
 FINAL,🚀 自动选择
@@ -64,7 +63,7 @@ FINAL,🚀 自动选择
 https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,DIRECT, tag=ACL4SSR局域网直连
 
 # 自用网易云解锁规则(需自行添加服务器)
-https://raw.githubusercontent.com/fomooerking/WYMUSIC/master/WYYMusic.list,🎧 网易解锁, tag=网易解锁
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list, policy=🎧 网易解锁, tag=网易解锁
 
 # NobyDa去广告规则（nobyda去广告规则已包含神机、lhie1去广告规则，无需再引用）
 https://raw.githubusercontent.com/NobyDa/Script/master/Surge/AdRule.list,REJECT, tag=NobyDa去广告规则
