--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -53,6 +53,7 @@ SubProxy = https://yourSubscribeServer.com
 🇺🇲 美国筛选 = NameRegex, FilterKey = "^(?!.*?游戏).*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
 
 [Rule]
+DOMAIN-SUFFIX,music.126.net,🎧 网易解锁
 # GeoIP China
 GEOIP,CN,DIRECT
 FINAL,🚀 自动选择
