--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -17,7 +17,7 @@ host = 127.0.0.1
 
 [Proxy]
 # >手动添加的节点
-解锁网易云灰色音乐 = HTTP,106.52.127.72,19951
+解锁网易云灰色音乐 = HTTP,music.lolico.me,39000
 
 [Remote Proxy]
 # 订阅节点
