--- a/Script.conf
+++ b/Script.conf
@@ -5,6 +5,9 @@
 # 微信
 http-response ^https?:\/\/weixin110\.qq\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi script-path=https://raw.githubusercontent.com/HotKids/Rules/master/Script/weixin110.js,requires-body=1,timeout=10, tag=微信 App 内被屏蔽链接快捷跳转
 
+# > 朋友圈广告
+http-response ^https:\/\/mp\.weixin\.qq\.com\/mp\/(getappmsgext|getappmsgad) script-path=https://raw.githubusercontent.com/iepngs/Script/master/weixin/ad.js,requires-body=true,tag=朋友圈广告
+
 # > 知乎 去广告
 http-response https://api.zhihu.com/moments/recommend requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20feed.js,tag=知乎
 http-response https://api.zhihu.com/topstory/recommend requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20recommend.js,tag=知乎
