--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -64,7 +64,7 @@ FINAL,🚀 自动选择
 https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,DIRECT, tag=ACL4SSR局域网直连
 
 # 自用网易云解锁规则(需自行添加服务器)
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list, policy=🎧 网易解锁, tag=网易解锁
+https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/NeteaseMusic.list, policy=🎧 网易解锁, tag=网易解锁
 
 # NobyDa去广告规则（nobyda去广告规则已包含神机、lhie1去广告规则，无需再引用）
 https://raw.githubusercontent.com/NobyDa/Script/master/Surge/AdRule.list,REJECT, tag=NobyDa去广告规则
@@ -72,28 +72,28 @@ https://raw.githubusercontent.com/NobyDa/Script/master/Surge/AdRule.list,REJECT,
 # ACL4SSR去广告规则
 https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list,REJECT, tag=ACL4SSR去广告规则
 
-# 神机规则(媒体分流)
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/PayPal.list, policy=💰 宝贝支付, tag=宝贝支付
-
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Google.list, policy=📮 谷歌服务, tag=谷歌服务
-
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/YouTube.list, policy=🎬 油管视频, tag=油管视频
-
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/Netflix.list, policy=📺 奈飞影视, tag=奈飞影视
-
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Apple.list, policy=🍎 苹果服务, tag=苹果服务
-
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list, policy=📟 电报信息, tag=电报信息
-
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/ForeignMedia.list, policy=🌍 国外网站, tag=国外网站
-
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list, policy=🌍 国外网站, tag=国外网站
-
 # ACL4SSR中国企业名录规则(增加某些国内厂商在国外的服务规则，如阿里HK可直连)
 https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list,DIRECT, tag=ACL4SSR中国企业名录规则
 
-# 神机规则(ChINA)
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list,DIRECT, tag=神机规则
+# 神机规则
+https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/China.list,DIRECT, tag=神机规则
+
+# 媒体分流
+https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/PayPal.list, policy=💰 宝贝支付, tag=宝贝支付
+
+https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/Google.list, policy=📮 谷歌服务, tag=谷歌服务
+
+https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/Media/YouTube.list, policy=🎬 油管视频, tag=油管视频
+
+https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/Media/Netflix.list, policy=📺 奈飞影视, tag=奈飞影视
+
+https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/Apple.list, policy=🍎 苹果服务, tag=苹果服务
+
+https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/Telegram.list, policy=📟 电报信息, tag=电报信息
+
+https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/ForeignMedia.list, policy=🌍 国外网站, tag=国外网站
+
+https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/Global.list, policy=🌍 国外网站, tag=国外网站
 
 [URL Rewrite]
 # >本地URL复写
