--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -31,26 +31,24 @@ SubProxy = https://yourSubscribeServer.com
 # Auto = url-test, SubProxy, url = http://bing.com/,interval = 600
 🚀 自动选择 = url-test,🇭🇰 香港筛选,🇨🇳 台湾筛选,🇺🇲 美国筛选,🇯🇵 日本筛选, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
 🎧 网易解锁 = select,DIRECT,解锁网易云灰色音乐
-📮 谷歌服务 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-🌍 国外网站 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-📟 电报信息 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-💰 宝贝支付 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-📺 奈飞影视 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-🎬 油管视频 = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-🍎 苹果服务 = select,DIRECT
-🇭🇰 香港节点 = select,🇭🇰 香港筛选
-🇨🇳 台湾节点 = select,🇨🇳 台湾筛选
-🇺🇲 美国节点 = select,🇺🇲 美国筛选
-🇯🇵 日本节点 = select,🇯🇵 日本筛选
+🌍 Global = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+📮 Google = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+🎬 YouTube = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+🎧 Spotify = select,🇺🇲 美国节点
+🌝 Twitter = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+💰 PayPal = select,🇺🇲 美国节点
+📺 Netflix = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+📟 Telegram = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+🍎 Apple = select,DIRECT
 
 # >筛选订阅节点
 [Remote Filter]
 # >通过正则方式筛选
-🇭🇰 香港筛选 = NameRegex, FilterKey = "^(?!.*?游戏).*(港|HK|Hong)"
-🇨🇳 台湾筛选 = NameRegex, FilterKey = "^(?!.*?游戏).*(台|TW|Tai)"
-🇰🇷 韩国筛选 = NameRegex, FilterKey = "^(?!.*?游戏).*(KR|Korea|KOR|首尔|韩|韓)"
-🇯🇵 日本筛选 = NameRegex, FilterKey = "^(?!.*?游戏).*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
-🇺🇲 美国筛选 = NameRegex, FilterKey = "^(?!.*?游戏).*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
+🇭🇰 香港节点 = NameRegex, FilterKey = "^(?!.*?游戏).*(港|HK|Hong)"
+🇨🇳 台湾节点 = NameRegex, FilterKey = "^(?!.*?游戏).*(台|TW|Tai)"
+🇰🇷 韩国节点 = NameRegex, FilterKey = "^(?!.*?游戏).*(KR|Korea|KOR|首尔|韩|韓)"
+🇯🇵 日本节点 = NameRegex, FilterKey = "^(?!.*?游戏).*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
+🇺🇲 美国节点 = NameRegex, FilterKey = "^(?!.*?游戏).*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
 
 [Rule]
 DOMAIN-SUFFIX,music.126.net,🎧 网易解锁
@@ -79,21 +77,24 @@ https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.li
 https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/China.list,DIRECT, tag=神机规则
 
 # 媒体分流
-https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/PayPal.list, policy=💰 宝贝支付, tag=宝贝支付
 
-https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/Google.list, policy=📮 谷歌服务, tag=谷歌服务
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Global/Global.list, policy=🌍 Global, tag=Global
 
-https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/Youtube.list, policy=🎬 油管视频, tag=油管视频
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Google/Google.list, policy=📮 Google, tag=Google
 
-https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/Netflix.list, policy=📺 奈飞影视, tag=奈飞影视
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/YouTube/YouTube.list, policy=🎬 YouTube, tag=YouTube
 
-https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/Apple.list, policy=🍎 苹果服务, tag=苹果服务
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Netflix/Netflix.list, policy=📺 Netflix, tag=Netflix
 
-https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/Telegram.list, policy=📟 电报信息, tag=电报信息
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Spotify/Spotify.list, policy=🎧 Spotify, tag=Spotify
 
-https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/ForeignMedia.list, policy=🌍 国外网站, tag=国外网站
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/PayPal/PayPal.list, policy=💰 PayPal, tag=PayPal
 
-https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/Global.list, policy=🌍 国外网站, tag=国外网站
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Telegram/Telegram.list, policy=📟 Telegram, tag=Telegram
+
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Twitter/Twitter.list, policy=🌝 Twitter, tag=Twitter
+
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Apple/Apple.list, policy=🍎 Apple, tag=Apple
 
 [URL Rewrite]
 # >本地URL复写
@@ -101,7 +102,7 @@ enable = true
 
 [Remote Rewrite]
 # >远程复写
-https://raw.githubusercontent.com/yishangfei/Loon/main/Rewrite.list, tag=rewrite, enabled=true
+https://github.com/787a68/Rules/blob/master/Loon/Rewrite.conf, tag=rewrite, enabled=true
 
 [Script]
 # >本地脚本
