--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -34,9 +34,9 @@ SubProxy = https://yourSubscribeServer.com
 🌍 Global = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
 📮 Google = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
 🎬 YouTube = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-🎧 Spotify = select,🇺🇲 美国节点
+🎧 Spotify = select,🚀 自动选择,🇺🇲 美国节点
 🌝 Twitter = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-💰 PayPal = select,🇺🇲 美国节点
+💰 PayPal = select,🚀 自动选择,🇺🇲 美国节点
 📺 Netflix = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
 📟 Telegram = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
 🍎 Apple = select,DIRECT
