--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -102,7 +102,7 @@ enable = true
 
 [Remote Rewrite]
 # >远程复写
-https://github.com/787a68/Rules/blob/master/Loon/Rewrite.conf, tag=rewrite, enabled=true
+https://raw.githubusercontent.com/yishangfei/Loon/main/Rewrite.list, tag=rewrite, enabled=true
 
 [Script]
 # >本地脚本
