--- a/QuantumultX/QuantumultX_diy.conf
+++ b/QuantumultX/QuantumultX_diy.conf
@@ -33,15 +33,15 @@ url-latency-benchmark=🇯🇵 日本, server-tag-regex=(?=.*(日本|JP|(?i)Japa
 url-latency-benchmark=🇸🇬 新加坡, server-tag-regex=(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW)).)*$, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Singapore.png
 url-latency-benchmark=🇺🇸 美国, server-tag-regex=(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW)).)*$, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/United_States.png
 static=🙈 网易云音乐, 解锁节点一, 🚀 节点选择, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music.png
-static=🐟 漏网之鱼, 🚀 节点选择, ♻️ 自动选择, TW 台湾, 🇭🇰 香港,🇯🇵 日本,🇸🇬 新加坡,🇺🇸 美国, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
-static=🍎 苹果服务, direct, proxy, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple.png
-static=💻 国外影视, proxy, direct, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/ForeignMedia.png
-static=📽 国内视频, direct, proxy, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/DomesticMedia.png
-static=🎬 YouTube, proxy, direct, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/YouTube.png
-static=📺 Netflix, proxy, direct, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netflix_Letter.png
-static=💰 PayPal, proxy, direct, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/PayPal.png
-static=🎧 Spotify, proxy, direct, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Spotify.png
-static=🌝 Twitter, proxy, direct, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Twitter.png
+static=🎬 YouTube,🚀 节点选择, ♻️ 自动选择, 🇨🇳 台湾, 🇭🇰 香港,🇯🇵 日本,🇸🇬 新加坡,🇺🇸 美国, PROXY, DIRECT, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/YouTube.png
+static=📺 Netflix,🚀 节点选择, ♻️ 自动选择, 🇨🇳 台湾, 🇭🇰 香港,🇯🇵 日本,🇸🇬 新加坡,🇺🇸 美国, PROXY, DIRECT, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netflix_Letter.png
+static=💰 PayPal,🚀 节点选择, ♻️ 自动选择, 🇨🇳 台湾, 🇭🇰 香港,🇯🇵 日本,🇸🇬 新加坡,🇺🇸 美国, PROXY, DIRECT, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/PayPal.png
+static=🎧 Spotify,🚀 节点选择, ♻️ 自动选择, 🇨🇳 台湾, 🇭🇰 香港,🇯🇵 日本,🇸🇬 新加坡,🇺🇸 美国, PROXY, DIRECT, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Spotify.png
+static=🌝 Twitter,🚀 节点选择, ♻️ 自动选择, 🇨🇳 台湾, 🇭🇰 香港,🇯🇵 日本,🇸🇬 新加坡,🇺🇸 美国, PROXY, DIRECT, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Twitter.png
+static=💻 国外影视,🚀 节点选择, ♻️ 自动选择, 🇨🇳 台湾, 🇭🇰 香港,🇯🇵 日本,🇸🇬 新加坡,🇺🇸 美国, PROXY, DIRECT, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/ForeignMedia.png
+static=📽 国内视频,🚀 节点选择, ♻️ 自动选择, 🇨🇳 台湾, 🇭🇰 香港,🇯🇵 日本,🇸🇬 新加坡,🇺🇸 美国, PROXY, DIRECT, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/DomesticMedia.png
+static=🍎 苹果服务, direct, 🚀 节点选择, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple.png
+static=🐟 漏网之鱼, 🚀 节点选择, ♻️ 自动选择, 🇨🇳 台湾, 🇭🇰 香港,🇯🇵 日本,🇸🇬 新加坡,🇺🇸 美国, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
 
 [server_remote]
 
