--- a/QuantumultX/QuantumultX_diy.conf
+++ b/QuantumultX/QuantumultX_diy.conf
@@ -26,9 +26,8 @@ server=114.114.114.114
 [policy]
 static=🚀 节点选择, ♻️ 自动选择, 🇭🇰 香港, 🇨🇳 台湾,🇺🇸 美国, 🇯🇵 日本,🇸🇬 新加坡, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Available.png
 static=🙈 网易云音乐, 解锁节点一, 解锁节点二, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music.png
-static=🎬 YouTube,🚀 节点选择, 🇭🇰 香港, 🇨🇳 台湾,🇺🇸 美国, 🇯🇵 日本,🇸🇬 新加坡, PROXY, DIRECT, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/YouTube.png
 static=📺 Netflix,🚀 节点选择, 🇭🇰 香港, 🇨🇳 台湾,🇺🇸 美国, 🇯🇵 日本,🇸🇬 新加坡, PROXY, DIRECT, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netflix_Letter.png
-static=💰 PayPal,🚀 节点选择, 🇭🇰 香港, 🇨🇳 台湾,🇺🇸 美国, 🇯🇵 日本,🇸🇬 新加坡, PROXY, DIRECT, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/PayPal.png
+static=💰 PayPal, 🚀 节点选择,🇺🇸 美国, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/PayPal.png
 static=🎧 Spotify,🚀 节点选择, 🇭🇰 香港, 🇨🇳 台湾,🇺🇸 美国, 🇯🇵 日本,🇸🇬 新加坡, PROXY, DIRECT, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Spotify.png
 static=🌝 Twitter,🚀 节点选择, 🇭🇰 香港, 🇨🇳 台湾,🇺🇸 美国, 🇯🇵 日本,🇸🇬 新加坡, PROXY, DIRECT, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Twitter.png
 static=🍎 苹果服务, DIRECT, 🇭🇰 香港, 🇺🇸 美国, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple.png
