--- a/QuantumultX/QuantumultX_diy.conf
+++ b/QuantumultX/QuantumultX_diy.conf
@@ -52,7 +52,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Filter
 # PayPal分流
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/PayPal/PayPal.list, tag=💰 PayPal, force-policy=💰 PayPal,update-interval=86400,enabled=true
 # Spotify分流
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Spotify/Spotify.list, tag=🎧 Spotify,force-policy🎧 Spotify,update-interval=86400,enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Spotify/Spotify.list, tag=🎧 Spotify,force-policy=🎧 Spotify,update-interval=86400,enabled=true
 # Unbreak 后续规则修正
 https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Filter/Unbreak.list, tag=🎯规则修正-直连, update-interval=86400, opt-parser=false, enabled=true
 # Advertising 广告
