--- a/QuantumultX/QuantumultX_diy.conf
+++ b/QuantumultX/QuantumultX_diy.conf
@@ -44,6 +44,7 @@ url-latency-benchmark=🇸🇬 新加坡, server-tag-regex=(?=.*(新|狮|獅|SG|
 url-latency-benchmark=🇺🇸 美国, server-tag-regex=(?=.*(美|US|(?i)States|American))^((?!(港|台|日|韩|新)).)*$, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 
 [server_remote]
+https://yourSubscribeServer.com, tag=SubProxy, update-interval=172800, opt-parser=true, enabled=true
 
 [filter_remote]
 # 网飞分流
@@ -110,10 +111,12 @@ FINAL,🐟 漏网之鱼
 ^https:\/\/app\.bilibili\.com\/(search\/resource|x\/(resource\/show\/tab|v2\/(view|rank|feed|reply\/main|account\/mine))) url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/Bilibili.js
 //彩云天气
 https:\/\/((weather-data\.apple)|(api.weather))\.com url script-request-header https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js
+
 [task_local]
+0 0 7,12,18,20 * * ? https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js, tag=彩云天气, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/weather.png, enabled=true
 
 [http_backend]
-https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/box.js.json, tag=BoxJs, path=^/, enabled=true
+https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, tag=BoxJs, path=^/, enabled=true
 
 [mitm]
 ;以下模块去掉;才生效
