--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -11,7 +11,7 @@
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,localhost,*.local,passenger.t3go.cn,passenger.t3go.cn
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 # [DNS] => DNS 服务器
-dns-server = system,119.29.29.29,114.114.114.114,223.5.5.5
+dns-server = system,119.29.29.29,114.114.114.114,223.5.5.5,1.1.1.1,8.8.8.8
 allow-udp-proxy = false
 host = 127.0.0.1
 # > 解决一些ip请求无法匹配域名类规则的问题。real-ip指定的域名将不返回fake ip响应，直接将dns请求发往目标dns服务器
@@ -40,7 +40,9 @@ SubProxy = https://yourSubscribeServer.com
 # 基于用户 UI 选择
 # url-test模式，给提供的 url 发出 http header 请求，根据返回结果，选择测速最快的节点，默认间隔 600s，测速超时时间5s，为了避免资源浪费，建议节点数不要过多，只支持单个节点和远端节点，其他会被忽略
 # Auto = url-test, SubProxy, url = http://bing.com/,interval = 600
+📳 Wifi无忧切换 = ssid,default = 🚀 节点选择, cellular = 🚀 节点选择, "FHY_5G" = DIRECT
 🚀 自动选择 = url-test,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
+👋 手动切换 = select,DIRECT,SubProxy
 🎧 网易解锁 = select,DIRECT,解锁网易云灰色音乐
 🌍 Global = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
 📮 Google = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
@@ -50,7 +52,7 @@ SubProxy = https://yourSubscribeServer.com
 💰 PayPal = select,🚀 自动选择,🇺🇲 美国节点
 📺 Netflix = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
 📟 Telegram = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-🍎 Apple = select,DIRECT
+🐟 漏网之鱼 = select,🚀 自动选择,👋 手动切换
 
 # >筛选订阅节点
 [Remote Filter]
@@ -65,47 +67,24 @@ SubProxy = https://yourSubscribeServer.com
 DOMAIN-SUFFIX,music.126.net,🎧 网易解锁
 # GeoIP China
 GEOIP,CN,DIRECT
-FINAL,🚀 自动选择
+FINAL,🐟 漏网之鱼
 
 [Remote Rule]
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising.list, policy=REJECT, tag=REJECT, parser-enable=true, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising_Domain.list, policy=REJECT, tag=REJECT, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy.list, policy=🌍 Global, tag=Global, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy_Domain.list, policy=🌍 Global, tag=Global, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/China/China.list, policy=DIRECT, tag=Domestic, enabled=true
 
-# Local Area Network(ACL4SSR局域网直连)
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,DIRECT, tag=ACL4SSR局域网直连
-
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Netflix/Netflix.list, policy=📺 Netflix, tag=Netflix, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/YouTube/YouTube.list, policy=🎬 YouTube, tag=YouTube, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Telegram/Telegram.list, policy=📟 Telegram, tag=Telegram, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Spotify/Spotify.list, policy=🎧 Spotify, tag=Spotify
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/PayPal/PayPal.list, policy=💰 PayPal, tag=PayPal
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Twitter/Twitter.list, policy=🌝 Twitter, tag=Twitter
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=DIRECT, tag=Apple, enabled=true
 # 自用网易云解锁规则(需自行添加服务器)
 https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/NeteaseMusic.list, policy=🎧 网易解锁, tag=网易解锁
-
-# NobyDa去广告规则（nobyda去广告规则已包含神机、lhie1去广告规则，无需再引用）
-https://raw.githubusercontent.com/NobyDa/Script/master/Surge/AdRule.list,REJECT, tag=NobyDa去广告规则
-
-# ACL4SSR去广告规则
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list,REJECT, tag=ACL4SSR去广告规则
-
-# ACL4SSR中国企业名录规则(增加某些国内厂商在国外的服务规则，如阿里HK可直连)
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list,DIRECT, tag=ACL4SSR中国企业名录规则
-
-# 神机规则
-https://raw.githubusercontent.com/yishangfei/Loon/main/Ruleset/China.list,DIRECT, tag=神机规则
-
-# 媒体分流
-
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Global/Global.list, policy=🌍 Global, tag=Global
-
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Google/Google.list, policy=📮 Google, tag=Google
-
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/YouTube/YouTube.list, policy=🎬 YouTube, tag=YouTube
-
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Netflix/Netflix.list, policy=📺 Netflix, tag=Netflix
-
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Spotify/Spotify.list, policy=🎧 Spotify, tag=Spotify
-
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/PayPal/PayPal.list, policy=💰 PayPal, tag=PayPal
-
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Telegram/Telegram.list, policy=📟 Telegram, tag=Telegram
-
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Twitter/Twitter.list, policy=🌝 Twitter, tag=Twitter
-
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Apple/Apple.list, policy=🍎 Apple, tag=Apple
 
 [URL Rewrite]
 # >本地URL复写
