--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -40,10 +40,9 @@ SubProxy = https://yourSubscribeServer.com
 # 基于用户 UI 选择
 # url-test模式，给提供的 url 发出 http header 请求，根据返回结果，选择测速最快的节点，默认间隔 600s，测速超时时间5s，为了避免资源浪费，建议节点数不要过多，只支持单个节点和远端节点，其他会被忽略
 # Auto = url-test, SubProxy, url = http://bing.com/,interval = 600
-📳 Wifi无忧切换 = ssid,default = 🚀 节点选择, cellular = 🚀 节点选择, "FHY_5G" = DIRECT
-🚀 自动选择 = url-test,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
-👋 手动切换 = select,DIRECT,SubProxy
-🎧 网易解锁 = select,DIRECT,解锁网易云灰色音乐
+🚀 节点选择 = select,♻️ 自动选择,👋 手动切换,🔮 负载均衡,DIRECT
+👋 手动切换 = select,DIRECT,比特云
+♻️ 自动选择 = url-test,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
 🌍 Global = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
 🎬 YouTube = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
 🎧 Spotify = select,🚀 自动选择,🇺🇲 美国节点
@@ -51,6 +50,7 @@ SubProxy = https://yourSubscribeServer.com
 💰 PayPal = select,🚀 自动选择,🇺🇲 美国节点
 📺 Netflix = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
 📟 Telegram = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+🎧 网易解锁 = select,DIRECT,解锁网易云灰色音乐
 🐟 漏网之鱼 = select,🚀 自动选择,👋 手动切换
 
 # >筛选订阅节点
