--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -43,15 +43,15 @@ SubProxy = https://yourSubscribeServer.com
 🚀 节点选择 = select,♻️ 自动选择,👋 手动切换,DIRECT
 👋 手动切换 = select,DIRECT,SubProxy
 ♻️ 自动选择 = url-test,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
-🌍 Global = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-🎬 YouTube = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-🎧 Spotify = select,🚀 自动选择,🇺🇲 美国节点
-🌝 Twitter = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-💰 PayPal = select,🚀 自动选择,🇺🇲 美国节点
-📺 Netflix = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
-📟 Telegram = select,🚀 自动选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+🌍 Global = select,🚀 节点选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+🎬 YouTube = select,🚀 节点选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+🎧 Spotify = select,🚀 节点选择,🇺🇲 美国节点
+🌝 Twitter = select,🚀 节点选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+💰 PayPal = select,🚀 节点选择,🇺🇲 美国节点
+📺 Netflix = select,🚀 节点选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
+📟 Telegram = select,🚀 节点选择,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点
 🎧 网易解锁 = select,DIRECT,解锁网易云灰色音乐
-🐟 漏网之鱼 = select,🚀 自动选择,👋 手动切换
+🐟 漏网之鱼 = select,🚀 节点选择,👋 手动切换
 
 # >筛选订阅节点
 [Remote Filter]
