--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -1,10 +1,5 @@
-# 折腾版本，相比精简版，增加NobyDa去广告规则，ACL4SSR去广告规则，网易云解锁规则，所有规则引用远程规则，Rewrite引用本地
-# 所有带 # 开头字段为注释行，不生效
-# - 国内直连
-# - 大部分广告域名屏蔽
-# - 常见国外网站
-# - 电报 telegram 支持
-# - 抗 DNS 污染
+#  Loon 懒人配置DIY版 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2021/1/21
+# GitHub主页(https://github.com/w37fhy/QuantumultX)
 
 [General]
 allow-udp-proxy=false
@@ -20,19 +15,12 @@ proxy-test-url = http://www.gstatic.com/generate_204
 test-timeout = 3
 
 [Proxy]
-# >手动添加的节点
 解锁网易云灰色音乐 = HTTP, 106.52.127.72, 19951
 
 [Remote Proxy]
-# 订阅节点
 SubProxy = https://yourSubscribeServer.com
 
 [Proxy Group]
-# 以下为策略组定义
-# 支持 select、url-test、fallback、ssid 这几种类型
-# 基于用户 UI 选择
-# url-test模式，给提供的 url 发出 http header 请求，根据返回结果，选择测速最快的节点，默认间隔 600s，测速超时时间5s，为了避免资源浪费，建议节点数不要过多，只支持单个节点和远端节点，其他会被忽略
-# Auto = url-test, SubProxy, url = http://bing.com/,interval = 600
 🚀 节点选择 = select,♻️ 自动选择,👋 手动切换,DIRECT
 
 ♻️ 自动选择 = url-test,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇲 美国节点,🇯🇵 日本节点, url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 100
