--- a/quantumultX_diy.conf
+++ b/quantumultX_diy.conf
@@ -92,7 +92,7 @@ https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Geo_Services
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Siri_Suggestions.qxrewrite, tag=Apple建议, update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Apple_Maps_CN.qxrewrite, tag=Apple地图, update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Apple_TV.qxrewrite, tag=Apple TV, update-interval=86400, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Apple_News.qxrewrite, tag=Apple News, update-interval=86400, opt-parser=false, enabled=true https://raw.githubusercontent.com/VirgilClyne/iRingo/main/RuleSet/Apple_News_for_Quantumult_X.list
+https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Apple_News.qxrewrite, tag=Apple News, update-interval=86400, opt-parser=false, enabled=true
 
 [http_backend]
 https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, tag=BoxJs, path=^/, enabled=true
