--- a/quantumultX_diy.conf
+++ b/quantumultX_diy.conf
@@ -24,7 +24,7 @@ server=/tplinklogin.net/system
 server=/tplogin.cn/system
 server=/aaplimg.com/119.29.29.29
 server=/apple.com/119.29.29.29
-server=/apple.com.cn/119.29.29.29
+server=/apple.com.cn/119.29.29.29e
 server=/apple-cloudkit.com/119.29.29.29
 server=/apple-mapkit.com/119.29.29.29
 server=/cdn-apple.com/119.29.29.29
@@ -48,7 +48,7 @@ server=/*icloud.com.akadns.net/119.29.29.29
 static=🚀 节点选择, ♻️ 自动选择, 🇭🇰 香港, 🇨🇳 台湾, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/face/master/Auto.png
 # 默认设置10分钟测速一次，当前使用节点延迟和最新测速延迟最低的节点相差100ms以上则切换为最新的最低延迟节点，否则继续延用节点
 url-latency-benchmark=♻️ 自动选择, server-tag-regex=.*, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Roundrobin.png
-static=🇺🇸 美国服务, 🚀 节点选择, 🇺🇸 美国, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Spotify.png
+static=🇺🇸 美国服务, 🚀 节点选择, 🇺🇸 美国, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Apple.png
 url-latency-benchmark=🇭🇰 香港, server-tag-regex=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$, check-interval=600, tolerance=50, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
 url-latency-benchmark=🇨🇳 台湾, server-tag-regex=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$, check-interval=600, tolerance=50, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
 url-latency-benchmark=🇯🇵 日本, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
