--- a/quantumultX_diy.conf
+++ b/quantumultX_diy.conf
@@ -30,7 +30,7 @@ url-latency-benchmark=🇯🇵 日本, server-tag-regex=(?=.*(日本|JP|(?i)Japa
 
 [server_remote]
 https://uuu.glass, tag=iQZone, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png,update-interval=172800, opt-parser=false, enabled=true
-https://fast.losadhwselfff2332dasd.xyz#out=ipv6, tag=CNIX, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png, update-interval=172800, opt-parser=true, enabled=true
+https://fast.losadhwselfff2332dasd.xyz#out=ipv6+加拿大+印度+法国+澳大利亚+爱尔兰+英国+韩国+俄罗斯+漏洞+本站+精简, tag=CNIX, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png, update-interval=172800, opt-parser=true, enabled=true
 
 [filter_remote]
 # Spotify Paypal分流
