--- a/QuantumultX/Rewrite/General.conf
+++ b/QuantumultX/Rewrite/General.conf
@@ -7,7 +7,8 @@ hostname = www.google.cn,www.firefox.com.cn,api.abema.io,app.biliintl.com,passpo
 ^https?:\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
 
 # Redirect no allowed
-^https?:\/\/?zhihu\.com url 302 https://yishangfei.github.io/
+
+^https?:\/\/(www.)?zhihu\.com url 302 https://yishangfei.github.io/
 
 # Redirect HTTP to HTTPS
 ^https?:\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
