--- a/QuantumultX/Rewrite/General.conf
+++ b/QuantumultX/Rewrite/General.conf
@@ -1,4 +1,4 @@
-hostname = www.google.cn,www.firefox.com.cn,api.abema.io,app.biliintl.com,passport.biliintl.com
+hostname = www.google.cn,www.firefox.com.cn,www.zhihu.com
 
 # Redirect Google Search Service
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
@@ -75,17 +75,3 @@ hostname = www.google.cn,www.firefox.com.cn,api.abema.io,app.biliintl.com,passpo
 ^https?:\/\/(www.)?yuanchengxiezuo\.com\/ url 302 https://www.teamviewer.com/
 ^https?:\/\/(www.)?zbrushcn.com/ url 302 https://pixologic.com/
 ^https?:\/\/(www.)?anydeskchina.cn/ url 302 https://anydesk.com/zhs
-
-# AbeamTV
-^https?:\/\/api\.abema\.io\/v\d\/ip\/check url reject-200
-
-# bstar intl
-(^https?:\/\/app\.biliintl\.com\/(x\/)?(intl|dm|reply|history|v\d\/(fav|msgfeed)).+?)(&s_locale=zh-Hans_[A-Z]{2})(.+?)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$6&sim_code=51503$8
-
-^https?:\/\/passport\.biliintl\.com\/x\/intl\/passport-login\/(sms\/send|reg\/sms|oauth2\/access_token|login\/sms) url script-request-body https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Rewrite/bstar.js
-(^https?:\/\/passport\.biliintl\.com\/x\/intl\/passport-login\/.+)(&s_locale=zh-Hans_[A-Z]{2})(.+)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$35&sim_code=51503$5
-
-^https?:\/\/app\.biliintl\.com\/(intl\/gateway\/v\d\/app\/data\/report\/heartbeat\/mobile|x\/(history|reply)/v\d/add) url script-request-body https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Rewrite/bstar.js
-
-# AICoin
-^http:\/\/(www.)?aicoin\.cn\/$ url 302 https://www.aicoin.com/
