--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -34,8 +34,7 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scr
 
 # >机场订阅
 [Remote Proxy]
-# >格式：机场别名 = 机场订阅地址
-比特云 = https://subscribe.bityun.org/api/v1/client/subscribe?token=yourtoken
+CNIX = https://github.com//,udp=true,fast-open=true,vmess-aead=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png
 
 # >策略组
 [Proxy Group]
@@ -49,22 +48,18 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scr
 📹 YouTube = select,🚀 节点选择,♻️ 自动选择,🚀 手动切换,🇭🇰 比特云-香港,DIRECT
 🎥 Netflix = select,🚀 节点选择,♻️ 自动选择,🚀 手动切换,🇭🇰 比特云-香港,DIRECT
 🍎 苹果服务 = select,DIRECT,🚀 节点选择,♻️ 自动选择,🚀 手动切换
-🎶 网易音乐 = select,DIRECT,解锁网易云灰色音乐,🚀 节点选择,♻️ 自动选择
 🎯 全球直连 = select,DIRECT,🚀 节点选择,♻️ 自动选择
 🛑 全球拦截 = select,REJECT,DIRECT
 🦈 漏网之鱼 = select,🚀 节点选择,👋 手动切换,🎯 全球直连,♻️ 自动选择,🔮 负载均衡
 
 # >筛选订阅节点
 [Remote Filter]
-CNIX = https://github.com/,udp=true,fast-open=true,vmess-aead=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png
-
 # >通过正则方式筛选
-🇭🇰 香港节点 = NameRegex,比特云, FilterKey = "(?i)(港|HK|Hong)"
-🇨🇳 台湾节点 = NameRegex, 比特云, FilterKey = "(?i)(台|TW|Tai)"
-🇯🇵 日本节点 = NameRegex,比特云, FilterKey = "(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
-🇰🇷 韩国节点 = NameRegex,比特云, FilterKey = "(?i)(KR|Korea|KOR|首尔|韩|韓)"
-🇺🇲 美国节点 = NameRegex, 比特云,FilterKey = "(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
-🇸🇬 狮城节点 = NameRegex,比特云, FilterKey = "(?i)(新加坡|坡|狮城|SG|Singapore)"
+🇭🇰 香港 = NameRegex,CNIX, FilterKey = 香港|HK|中港|沪港
+🇨🇳 台湾 = NameRegex,CNIX, FilterKey = 台湾|TW
+🇯🇵 日本 = NameRegex,CNIX, FilterKey = 日本|JP
+🇺🇸 美国 = NameRegex,CNIX, FilterKey = 美国|US
+Other = NameRegex,CNIX, FilterKey = ^(?!.*(HK|JP|US|TW|香港|日本|台湾|美国|中港|沪港)).*$
 
 
 # >本地分流规则
