--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -108,9 +108,13 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 
 # >插件(类似Surge的模块)
 [Plugin]
-
+https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Weather.plugin, tag=🌤天气, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Location.plugin, tag=📍定位, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Siri.plugin, tag=🔍Siri与搜索, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/TV.plugin, tag=📺TV, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/News.plugin, tag=📰News, enabled=true
+https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, tag=BoxJS, enabled=true
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Block/Advertising.plugin, tag=重写去广告, enabled=false
-https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.tf.plugin, tag=BoxJS_TF版, enabled=false
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, tag=Sub-Store订阅, enabled=false
 
 [MITM]
