--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -38,19 +38,14 @@ CNIX = https://github.com//,udp=true,fast-open=true,vmess-aead=true,img-url=http
 
 # >策略组
 [Proxy Group]
-
-📳 Wifi无忧切换 = ssid,default = 🚀 节点选择, cellular = 🚀 节点选择, "FHY_5G" = DIRECT
-🚀 节点选择 = select,♻️ 自动选择,👋 手动切换,🔮 负载均衡,DIRECT
-👋 手动切换 = select,DIRECT,比特云
-♻️ 自动选择 = url-test,🇭🇰 比特云-香港,url=http://www.gstatic.com/generate_204, interval=300, tolerance = 100
-🔮 负载均衡 = load-balance,🇭🇰 比特云-香港,url = http://www.gstatic.com/generate_204, interval = 300,max-timeout = 2000,algorithm = pcc
-📲 电报消息 = select,🚀 节点选择,♻️ 自动选择,🚀 手动切换,🇭🇰 比特云-香港,DIRECT
-📹 YouTube = select,🚀 节点选择,♻️ 自动选择,🚀 手动切换,🇭🇰 比特云-香港,DIRECT
-🎥 Netflix = select,🚀 节点选择,♻️ 自动选择,🚀 手动切换,🇭🇰 比特云-香港,DIRECT
-🍎 苹果服务 = select,DIRECT,🚀 节点选择,♻️ 自动选择,🚀 手动切换
-🎯 全球直连 = select,DIRECT,🚀 节点选择,♻️ 自动选择
-🛑 全球拦截 = select,REJECT,DIRECT
-🦈 漏网之鱼 = select,🚀 节点选择,👋 手动切换,🎯 全球直连,♻️ 自动选择,🔮 负载均衡
+🚀 节点选择 = select,♻️ 自动选择,🔮 负载均衡,DIRECT,🇭🇰香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
+♻️ 自动选择 = url-test,🇭🇰香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other,url=http://www.gstatic.com/generate_204, interval=1800, tolerance = 50, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
+🔮 负载均衡 = load-balance,🇭🇰香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other,url = http://www.gstatic.com/generate_204, interval = 300,max-timeout = 2000,algorithm = pcc, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Round_Robin.png
+📟 电报消息 = select,♻️ 自动选择,Other, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
+💰 PayPal = select,♻️ 自动选择,🇺🇸 美国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
+🍎 苹果服务 = select,♻️ 自动选择,🇺🇸 美国,DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+⛔️ 全球拦截 = select,REJECT,DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hijacking.png
+🦈 漏网之鱼 = select,♻️ 自动选择,🚀 节点选择,DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
 # >筛选订阅节点
 [Remote Filter]
@@ -60,7 +55,6 @@ CNIX = https://github.com//,udp=true,fast-open=true,vmess-aead=true,img-url=http
 🇯🇵 日本 = NameRegex,CNIX, FilterKey = 日本|JP
 🇺🇸 美国 = NameRegex,CNIX, FilterKey = 美国|US
 Other = NameRegex,CNIX, FilterKey = ^(?!.*(HK|JP|US|TW|香港|日本|台湾|美国|中港|沪港)).*$
-
 
 # >本地分流规则
 [Rule]
