--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -43,7 +43,7 @@ CNIX = https://github.com//,udp=true,fast-open=true,vmess-aead=true,img-url=http
 🔮 负载均衡 = load-balance,🇭🇰香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other,url = http://www.gstatic.com/generate_204, interval = 300,max-timeout = 2000,algorithm = pcc, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Round_Robin.png
 📟 电报消息 = select,♻️ 自动选择,Other, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
 💰 PayPal = select,♻️ 自动选择,🇺🇸 美国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
-🍎 苹果服务 = select,♻️ 自动选择,🇺🇸 美国,DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+🍎 苹果服务 = select,♻️ 自动选择,DIRECT,🇺🇸 美国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 ⛔️ 全球拦截 = select,REJECT,DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hijacking.png
 🦈 漏网之鱼 = select,♻️ 自动选择,🚀 节点选择,DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
@@ -69,22 +69,22 @@ FINAL,🦈 漏网之鱼
 
 # >分流规则 远程订阅
 [Remote Rule]
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list, policy=🎯 全球直连, tag=本地网络-直连, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list, policy=🎯 全球直连, tag=去广告白名单-直连, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list, policy=🛑 全球拦截, tag=常见关键字去广告-拦截, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list, policy=🛑 全球拦截, tag=常见应用内去广告-拦截, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list, policy=🎯 全球直连, tag=谷歌国内业务-直连, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list, policy=🍎 苹果服务, tag=苹果服务-直连, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list, policy=📲 电报消息, tag=电报分流-代理, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list, policy=🎶 网易音乐, tag=网易云音乐-直连, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list, policy=📹 YouTube, tag=YouTube分流, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list, policy=🎥 Netflix, tag=Netflix分流, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list, policy=📳 Wifi无忧切换, tag=国外媒体-代理, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list, policy=📳 Wifi无忧切换, tag=国外域名等规则(轻量级)-代理, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, policy=🎯 全球直连, tag=国内域名-直连, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list, policy=🎯 全球直连, tag=国内云服务商IP段-直连, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Download/Download.list, policy=🎯 全球直连, tag=BT下载规则-直连, enabled=true
-
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Global/Global.list, policy=♻️ 自动选择, tag=🌍 Global, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=♻️ 自动选择, tag=🌍 GlobalMedia, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia_Domain.list, policy=♻️ 自动选择, tag=🌍 GlobalMedia_Domain, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/China/China.list, policy=DIRECT, tag=🎯 国内网站-直连, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaMax/ChinaMax.list, policy=DIRECT, tag=🎯 ChinaMax, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaMax/ChinaMax_Domain.list, policy=DIRECT, tag=🎯 ChinaMax_Domain, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaIPs/ChinaIPs.list, policy=DIRECT, tag=🎯 中国IP-直连, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=DIRECT, tag=🌐 Speedtest-直连, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=DIRECT, tag=🍎 Apple, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AppleNews/AppleNews.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/FitnessPlus/FitnessPlus.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AppleProxy/AppleProxy.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Telegram/Telegram.list, policy=📟 Telegram, tag=📟 Telegram, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/PayPal/PayPal.list, policy=💰 PayPal, tag=💰 PayPal, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Hijacking/Hijacking.list, policy=⛔️ 全球拦截, tag=⛔️ 全球拦截, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Privacy/Privacy.list, policy=⛔️ 全球拦截, tag=⛔️ 全球拦截, enabled=true
 
 # >本地URL复写
 [URL Rewrite]
@@ -108,7 +108,8 @@ https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Siri.plugin, ta
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/TV.plugin, tag=📺TV, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/News.plugin, tag=📰News, enabled=true
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, tag=BoxJS, enabled=true
-https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Block/Advertising.plugin, tag=重写去广告, enabled=false
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/Loon/Advertising/Advertising.plugin, tag=重写去广告, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_lite.lnplugin, tag=知乎助手_去广告, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, tag=Sub-Store订阅, enabled=false
 
 [MITM]
