--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -34,6 +34,8 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scr
 
 # >机场订阅
 [Remote Proxy]
+iQZone = https://github.com//,udp=true,fast-open=true,vmess-aead=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png
+一元机场 = https://github.com//,udp=true,fast-open=true,vmess-aead=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png
 CNIX = https://github.com//,udp=true,fast-open=true,vmess-aead=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png
 
 # >策略组
@@ -110,6 +112,7 @@ https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/News.plugin, ta
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, tag=BoxJS, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/Loon/Advertising/Advertising.plugin, tag=重写去广告, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_lite.lnplugin, tag=知乎助手_去广告, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/Loon/Redirect/Redirect.plugin, tag=重定向, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, tag=Sub-Store订阅, enabled=false
 
 [MITM]
