--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -36,7 +36,6 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/bac
 [Remote Proxy]
 iQZone = https://github.com/,udp=true,fast-open=true,vmess-aead=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png
 一元机场 = https://github.com/,udp=true,fast-open=true,vmess-aead=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png
-CNIX = https://github.com/,udp=true,fast-open=true,vmess-aead=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png
 
 # >策略组
 [Proxy Group]
@@ -52,11 +51,11 @@ CNIX = https://github.com/,udp=true,fast-open=true,vmess-aead=true,img-url=https
 # >筛选订阅节点
 [Remote Filter]
 # >通过正则方式筛选
-🇭🇰 香港 = NameRegex,CNIX,一元机场,CNIX, FilterKey = 香港|HK|中港|沪港
-🇨🇳 台湾 = NameRegex,CNIX,一元机场,CNIX, FilterKey = 台湾|TW
-🇯🇵 日本 = NameRegex,CNIX,一元机场,CNIX, FilterKey = 日本|JP
-🇺🇸 美国 = NameRegex,CNIX一元机场,CNIX,, FilterKey = 美国|US
-Other = NameRegex,CNIX,一元机场,CNIX, FilterKey = ^(?!.*(HK|JP|US|TW|香港|日本|台湾|美国|中港|沪港)).*$
+🇭🇰 香港 = NameRegex,iQZone,一元机场, FilterKey = 香港|HK|中港|沪港
+🇨🇳 台湾 = NameRegex,iQZone,一元机场, FilterKey = 台湾|TW
+🇯🇵 日本 = NameRegex,iQZone,一元机场, FilterKey = 日本|JP
+🇺🇸 美国 = NameRegex,iQZone,一元机场, FilterKey = 美国|US
+Other = NameRegex,iQZone,一元机场, FilterKey = ^(?!.*(HK|JP|US|TW|香港|日本|台湾|美国|中港|沪港)).*$
 
 # >本地分流规则
 [Rule]
