--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -106,6 +106,7 @@ https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Location.plugin
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Siri.plugin, tag=🔍Siri与搜索, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/TV.plugin, tag=📺TV, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/News.plugin, tag=📰News, enabled=true
+https://raw.githubusercontent.com/Peng-YM/Loon-Gallery/master/loon-gallery.plugin, tag=🎈Gallery, enabled=true
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, tag=BoxJS, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, tag=Sub-Store订阅, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/Loon/Advertising/Advertising.plugin, tag=重写去广告, enabled=true
